--- a/style/style.css
+++ b/style/style.css
@@ -103,6 +103,7 @@ a {
 
 .navbar .navbar-nav .nav-link {
   color: #fff;
+  font-size: .9rem;
 }
 
 .navbar .navbar-nav .nav-link:hover {
@@ -124,17 +125,17 @@ a {
 }
 
 .home .home-box .box-content p {
-  font-size: 2rem;
+  font-size: 1.7rem;
   font-family: "Josefin Sans", sans-serif;
 }
 
 .home .home-box .box-content h2 {
-  font-size: 2.9rem;
+  font-size: 2.5rem;
   font-family: "Josefin Sans", sans-serif;
 }
 
 .home .home-box .box-content h3 {
-  font-size: 1.7rem;
+  font-size: 1.4rem;
   font-family: "Josefin Sans", sans-serif;
 }
 
@@ -144,7 +145,7 @@ a {
   border-radius: 45%;
   border: 3px solid #fff;
   position: absolute;
-  bottom: -60%;
+  bottom: -40%;
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
@@ -663,6 +664,57 @@ footer ul a:hover {
   }
   .talkall h2 {
     font-size: 1.8rem;
+  }
+  .contact .box-contact i {
+    font-size: 1.2rem;
+  }
+  .contact .box-contact h3 {
+    font-size: 1.1rem;
+  }
+  .contact .box-contact span {
+    font-size: .9rem;
+  }
+  footer p {
+    font-size: .9rem;
+  }
+  footer ul a {
+    color: #fff;
+    font-size: .9rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .home .home-box .box-content p {
+    font-size: 1rem;
+  }
+  .home .home-box .box-content h2 {
+    font-size: 1.4rem;
+    text-align: center;
+  }
+  .home .home-box .box-content h3 {
+    font-size: 1rem;
+    text-align: center;
+  }
+  .home .home-box .btn {
+    font-size: 1rem;
+  }
+  .about .content p {
+    font-size: 1.3rem;
+  }
+  .about .content p::after {
+    height: 0px;
+  }
+  .about .content span {
+    font-size: .8rem;
+  }
+  .about .about-content p {
+    font-size: .8rem;
+  }
+  .talkall h2 {
+    font-size: 1.6rem;
+  }
+  .talkall h2::after {
+    top: 40px;
   }
   .contact .box-contact i {
     font-size: 1.2rem;
