--- a/style/style.css
+++ b/style/style.css
@@ -384,6 +384,15 @@ footer ul a:hover {
 
 #loading {
   position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   top: 0;
   bottom: 0;
   right: 0;
@@ -396,8 +405,8 @@ footer ul a:hover {
 
 #loading .sk-circle {
   margin: 100px auto;
-  width: 40px;
-  height: 40px;
+  width: 65px;
+  height: 65px;
   position: relative;
 }
 
